# EcoSim

./: Installation_Instructions.txt  README.md  setup.py
City-Sim/: Animal.py  City.py  Const.py  Construct.py  Field.py  GUI.py  KillRogueProcs.py  MyMultiprocessing.py  MyPoint.py  MyRect.py  PH_test.py  Pasture.py  Plant.py  Scout.py  Tractor.py  Visualization.py  Zone.py  f.py  mp_test.py  pyproject.toml  test.py  test2.py
City-Sim/Enums/: enums.py
City-Sim/SequenceDiagrams/: Client_Server_Communication.txt  GUI_workflow_for_choosing_Policies.txt  Parent-Child_Process_Communication.txt  Weather_Effects_(Rain).txt  Weather_Effects_(Template).txt
City-Sim/Testing/: GUI_test.py  mp_pool.py  river_flood.py  test0.py
City-Sim/effects/: Snow.py  Weather.py
City-Sim/networking/: Networking.py  RunBat.py  roadmap.txt  runserver.bat
City-Sim/src/City-Sim/: InGameGUI.py  MyPoint.py  Pasture.py  Tractor.py  test.py
EcoSim/: Bank.py  Business.py  City.py  Merchant.py  Scout.py  Visualization.py  economic_sim.py
EcoSim assests/: Clouds.png~
EcoSim/Enums/: __init__.py
EcoSim/Tests/: test_.py
Eco_sim/: Bank.py  Business.py  City.py  Constants.py  Merchant.py  economic_sim.py
Eco_sim.egg-info/: PKG-INFO  SOURCES.txt
Eco_sim/Enums/: enums.py
Networking/: Networking.py
Networking/EcoSimSite/: db.sqlite3  manage.py
Networking/EcoSimSite/EcoSimApp/: apps.py  consumers.py  models.py  routing.py  urls.py  views.py
Networking/EcoSimSite/EcoSimSite/: asgi.py  settings.py  urls.py  wsgi.py
Networking/EcoSimSite/templates/: base.html  index.html  room.html  (+2 more)
(+3 files in other folders)
