[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Eco-Sim_TsiamDev"
version = "0.0.1"
authors = [
  { name="TsiamDev"},
]
description = "EcoSim - A multiplayer co-op, ecosystem Simulation"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/TsiamDev/EcoSim"
"Bug Tracker" = "https://github.com/TsiamDev/EcoSim/issues"